Update and rename punk.html to index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
      rel="stylesheet"
      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
      crossorigin="anonymous">
-     <link rel="stylesheet" href="punk.css">
+     <link rel="stylesheet" href="style.css">
     <title>PUNKAPI</title>
 </head>
 <body>
@@ -16,6 +16,6 @@
         <span> PUNKAPI API USING PROMISE </span>
     </div>
     <div id="card-container" class="card-deck"></div>
-    <script src="punk.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
